--- a/TKV2025_files/sheet020.htm
+++ b/TKV2025_files/sheet020.htm
@@ -16,7 +16,8 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	{mso-displayed-decimal-separator:"\,";
 	mso-displayed-thousand-separator:" ";}
 @page
-	{margin:.79in .7in .79in .7in;
+	{mso-footer-data:"&C\000D&1\#&\0022Calibri\0022&10&K000000 Confidential";
+	margin:.79in .7in .79in .7in;
 	mso-header-margin:.3in;
 	mso-footer-margin:.3in;}
 -->
@@ -83,15 +84,15 @@ else
  width:35pt'>
  <col class=xl70 width=185 style='mso-width-source:userset;mso-width-alt:6765;
  width:139pt'>
- <col class=xl70 width=102 style='mso-width-source:userset;mso-width-alt:3730;
- width:77pt'>
+ <col class=xl70 width=70 style='mso-width-source:userset;mso-width-alt:2560;
+ width:53pt'>
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=185 style='mso-width-source:userset;mso-width-alt:6765;
  width:139pt'>
- <col class=xl70 width=70 style='mso-width-source:userset;mso-width-alt:2560;
- width:53pt'>
+ <col class=xl70 width=102 style='mso-width-source:userset;mso-width-alt:3730;
+ width:77pt'>
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
@@ -297,11 +298,11 @@ else
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
   <td class=xl70 width=185 style='width:139pt'></td>
-  <td class=xl70 width=102 style='width:77pt'></td>
+  <td class=xl70 width=70 style='width:53pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
   <td class=xl70 width=185 style='width:139pt'></td>
-  <td class=xl70 width=70 style='width:53pt'></td>
+  <td class=xl70 width=102 style='width:77pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
   <td class=xl70 width=196 style='width:147pt'></td>
@@ -1085,7 +1086,7 @@ else
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
   <td colspan=2 class=xl185 style='border-right:.5pt solid black;border-left:
-  none'>11</td>
+  none'>12</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -14725,11 +14726,11 @@ else
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
   <td width=185 style='width:139pt'></td>
-  <td width=102 style='width:77pt'></td>
+  <td width=70 style='width:53pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
   <td width=185 style='width:139pt'></td>
-  <td width=70 style='width:53pt'></td>
+  <td width=102 style='width:77pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
   <td width=196 style='width:147pt'></td>
