--- a/TKV2025_files/sheet021.htm
+++ b/TKV2025_files/sheet021.htm
@@ -16,7 +16,8 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	{mso-displayed-decimal-separator:"\,";
 	mso-displayed-thousand-separator:" ";}
 @page
-	{margin:.79in .7in .79in .7in;
+	{mso-footer-data:"&C\000D&1\#&\0022Calibri\0022&10&K000000 Confidential";
+	margin:.79in .7in .79in .7in;
 	mso-header-margin:.3in;
 	mso-footer-margin:.3in;}
 -->
@@ -45,8 +46,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=9507 style='border-collapse:
- collapse;table-layout:fixed;width:7156pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=9503 style='border-collapse:
+ collapse;table-layout:fixed;width:7153pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=197 style='mso-width-source:userset;mso-width-alt:7204;
@@ -119,8 +120,8 @@ else
  width:35pt'>
  <col class=xl70 width=180 style='mso-width-source:userset;mso-width-alt:6582;
  width:135pt'>
- <col class=xl70 width=70 style='mso-width-source:userset;mso-width-alt:2560;
- width:53pt'>
+ <col class=xl70 width=102 style='mso-width-source:userset;mso-width-alt:3730;
+ width:77pt'>
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
@@ -145,10 +146,10 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
- <col class=xl70 width=102 style='mso-width-source:userset;mso-width-alt:3730;
- width:77pt'>
+ <col class=xl70 width=76 style='mso-width-source:userset;mso-width-alt:2779;
+ width:57pt'>
+ <col class=xl70 width=70 style='mso-width-source:userset;mso-width-alt:2560;
+ width:53pt'>
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
@@ -318,7 +319,7 @@ else
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
   <td class=xl70 width=180 style='width:135pt'></td>
-  <td class=xl70 width=70 style='width:53pt'></td>
+  <td class=xl70 width=102 style='width:77pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
   <td class=xl70 width=196 style='width:147pt'></td>
@@ -333,8 +334,8 @@ else
   <td class=xl70 width=70 style='width:53pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
-  <td class=xl70 width=102 style='width:77pt'></td>
+  <td class=xl70 width=76 style='width:57pt'></td>
+  <td class=xl70 width=70 style='width:53pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
   <td class=xl70 width=76 style='width:57pt'></td>
@@ -1086,7 +1087,7 @@ else
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
   <td colspan=2 class=xl185 style='border-right:.5pt solid black;border-left:
-  none'>11</td>
+  none'>12</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1219,7 +1220,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>5100</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>180
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>168
   Kč</td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
@@ -1357,7 +1358,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>4450</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>157
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>146
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1585,7 +1586,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>3900</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>138
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>128
   Kč</td>
   <td class=xl70></td>
   <td class=xl71>Odměny</td>
@@ -1814,7 +1815,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>3150</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>111
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>104
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2043,7 +2044,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>2900</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>103
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>95
   Kč</td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -14761,7 +14762,7 @@ else
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
   <td width=180 style='width:135pt'></td>
-  <td width=70 style='width:53pt'></td>
+  <td width=102 style='width:77pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
   <td width=196 style='width:147pt'></td>
@@ -14776,8 +14777,8 @@ else
   <td width=70 style='width:53pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
-  <td width=102 style='width:77pt'></td>
+  <td width=76 style='width:57pt'></td>
+  <td width=70 style='width:53pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
   <td width=76 style='width:57pt'></td>
