--- a/TKV2025_files/sheet010.htm
+++ b/TKV2025_files/sheet010.htm
@@ -16,7 +16,8 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	{mso-displayed-decimal-separator:"\,";
 	mso-displayed-thousand-separator:" ";}
 @page
-	{margin:.79in .7in .79in .7in;
+	{mso-footer-data:"&C\000D&1\#&\0022Calibri\0022&10&K000000 Confidential";
+	margin:.79in .7in .79in .7in;
 	mso-header-margin:.3in;
 	mso-footer-margin:.3in;}
 -->
@@ -45,16 +46,16 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=10295 style='border-collapse:
- collapse;table-layout:fixed;width:7740pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=10397 style='border-collapse:
+ collapse;table-layout:fixed;width:7817pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=179 style='mso-width-source:userset;mso-width-alt:6546;
  width:134pt'>
  <col class=xl70 width=109 style='mso-width-source:userset;mso-width-alt:3986;
  width:82pt'>
- <col class=xl70 width=41 style='mso-width-source:userset;mso-width-alt:1499;
- width:31pt'>
+ <col class=xl70 width=42 style='mso-width-source:userset;mso-width-alt:1536;
+ width:32pt'>
  <col class=xl70 width=50 span=2 style='width:38pt'>
  <col class=xl70 width=104 style='mso-width-source:userset;mso-width-alt:3803;
  width:78pt'>
@@ -123,6 +124,13 @@ else
  width:35pt'>
  <col class=xl70 width=179 style='mso-width-source:userset;mso-width-alt:6546;
  width:134pt'>
+ <col class=xl70 width=109 style='mso-width-source:userset;mso-width-alt:3986;
+ width:82pt'>
+ <col class=xl70 width=50 style='width:38pt'>
+ <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
+ width:35pt'>
+ <col class=xl70 width=177 style='mso-width-source:userset;mso-width-alt:6473;
+ width:133pt'>
  <col class=xl70 width=109 style='mso-width-source:userset;mso-width-alt:3986;
  width:82pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -265,18 +273,11 @@ else
  width:57pt'>
  <col class=xl70 width=109 style='mso-width-source:userset;mso-width-alt:3986;
  width:82pt'>
- <col class=xl70 width=50 style='width:38pt'>
- <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
- width:35pt'>
- <col class=xl70 width=76 style='mso-width-source:userset;mso-width-alt:2779;
- width:57pt'>
- <col class=xl70 width=109 style='mso-width-source:userset;mso-width-alt:3986;
- width:82pt'>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 width=47 style='height:15.0pt;width:35pt'></td>
   <td class=xl70 width=179 style='width:134pt'></td>
   <td class=xl70 width=109 style='width:82pt'></td>
-  <td class=xl70 width=41 style='width:31pt'></td>
+  <td class=xl70 width=42 style='width:32pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=104 style='width:78pt'></td>
@@ -330,6 +331,10 @@ else
   <td class=xl70 width=109 style='width:82pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
+  <td class=xl70 width=177 style='width:133pt'></td>
+  <td class=xl70 width=109 style='width:82pt'></td>
+  <td class=xl70 width=50 style='width:38pt'></td>
+  <td class=xl70 width=47 style='width:35pt'></td>
   <td class=xl70 width=76 style='width:57pt'></td>
   <td class=xl70 width=109 style='width:82pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
@@ -360,10 +365,6 @@ else
   <td class=xl70 width=47 style='width:35pt'></td>
   <td class=xl70 width=80 style='width:60pt'></td>
   <td class=xl70 width=141 style='width:106pt'></td>
-  <td class=xl70 width=50 style='width:38pt'></td>
-  <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=76 style='width:57pt'></td>
-  <td class=xl70 width=109 style='width:82pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
   <td class=xl70 width=76 style='width:57pt'></td>
@@ -1084,7 +1085,7 @@ else
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
   <td colspan=2 class=xl185 style='border-right:.5pt solid black;border-left:
-  none'>11</td>
+  none'>12</td>
   <td class=xl70></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1213,8 +1214,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>16</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>9700</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>18</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>11100</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
@@ -1348,8 +1349,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>14</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>9500</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>16</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>10900</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1573,8 +1574,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>14</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>6600</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>16</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>7600</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -1795,9 +1796,10 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>17</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>6150</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Růžička Martin
+  [CZE069712]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>14</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>6900</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Pořadí</td>
@@ -2020,17 +2022,16 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Růžička Martin
-  [CZE069712]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>12</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>5900</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>19</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>6850</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl82 style='border-top:none'>Strašil Pavel [CZE015487]</td>
-  <td class=xl145 style='border-left:none'>11</td>
+  <td class=xl145 style='border-left:none'>12</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2167,7 +2168,7 @@ else
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl82 style='border-top:none'>Ptáček Radim [CZE071042]</td>
-  <td class=xl82 style='border-top:none;border-left:none'>4</td>
+  <td class=xl82 style='border-top:none;border-left:none'>5</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2580,9 +2581,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>1300</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>1400</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2734,9 +2737,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>1000</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>1400</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2815,8 +2820,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>9</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Škareda Matěj [CZE069713]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>8</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>3100</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>10</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>3600</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2888,9 +2893,12 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>900</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Růžička Martin
+  [CZE069712]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>1000</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3043,9 +3051,11 @@ else
   [CZE069712]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>800</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>1000</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3198,9 +3208,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>500</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Březina Lukáš [CZE022098]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>700</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3349,9 +3361,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Škareda Jan [CZE079725]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>500</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>700</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3426,10 +3440,12 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl78 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
+  font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
+  none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>13</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Březina Lukáš [CZE022098]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>2</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>700</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3496,9 +3512,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Škareda Matěj [CZE069713]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>500</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -14223,7 +14241,7 @@ else
   <td width=47 style='width:35pt'></td>
   <td width=179 style='width:134pt'></td>
   <td width=109 style='width:82pt'></td>
-  <td width=41 style='width:31pt'></td>
+  <td width=42 style='width:32pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=104 style='width:78pt'></td>
@@ -14277,6 +14295,10 @@ else
   <td width=109 style='width:82pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
+  <td width=177 style='width:133pt'></td>
+  <td width=109 style='width:82pt'></td>
+  <td width=50 style='width:38pt'></td>
+  <td width=47 style='width:35pt'></td>
   <td width=76 style='width:57pt'></td>
   <td width=109 style='width:82pt'></td>
   <td width=50 style='width:38pt'></td>
@@ -14307,10 +14329,6 @@ else
   <td width=47 style='width:35pt'></td>
   <td width=80 style='width:60pt'></td>
   <td width=141 style='width:106pt'></td>
-  <td width=50 style='width:38pt'></td>
-  <td width=47 style='width:35pt'></td>
-  <td width=76 style='width:57pt'></td>
-  <td width=109 style='width:82pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
   <td width=76 style='width:57pt'></td>
