--- a/TKV2025_files/sheet011.htm
+++ b/TKV2025_files/sheet011.htm
@@ -16,7 +16,8 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	{mso-displayed-decimal-separator:"\,";
 	mso-displayed-thousand-separator:" ";}
 @page
-	{margin:.79in .7in .79in .7in;
+	{mso-footer-data:"&C\000D&1\#&\0022Calibri\0022&10&K000000 Confidential";
+	margin:.79in .7in .79in .7in;
 	mso-header-margin:.3in;
 	mso-footer-margin:.3in;}
 -->
@@ -45,8 +46,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=9189 style='border-collapse:
- collapse;table-layout:fixed;width:6910pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=9294 style='border-collapse:
+ collapse;table-layout:fixed;width:6989pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=179 style='mso-width-source:userset;mso-width-alt:6546;
@@ -132,8 +133,15 @@ else
  width:35pt'>
  <col class=xl70 width=177 style='mso-width-source:userset;mso-width-alt:6473;
  width:133pt'>
- <col class=xl70 width=105 style='mso-width-source:userset;mso-width-alt:3840;
- width:79pt'>
+ <col class=xl70 width=73 style='mso-width-source:userset;mso-width-alt:2669;
+ width:55pt'>
+ <col class=xl70 width=50 style='width:38pt'>
+ <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
+ width:35pt'>
+ <col class=xl70 width=177 style='mso-width-source:userset;mso-width-alt:6473;
+ width:133pt'>
+ <col class=xl70 width=73 style='mso-width-source:userset;mso-width-alt:2669;
+ width:55pt'>
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
@@ -186,17 +194,10 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=76 style='mso-width-source:userset;mso-width-alt:2779;
- width:57pt'>
- <col class=xl70 width=73 style='mso-width-source:userset;mso-width-alt:2669;
- width:55pt'>
- <col class=xl70 width=50 style='width:38pt'>
- <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
- width:35pt'>
- <col class=xl70 width=76 style='mso-width-source:userset;mso-width-alt:2779;
- width:57pt'>
- <col class=xl70 width=73 style='mso-width-source:userset;mso-width-alt:2669;
- width:55pt'>
+ <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
+ width:60pt'>
+ <col class=xl70 width=105 style='mso-width-source:userset;mso-width-alt:3840;
+ width:79pt'>
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
@@ -325,7 +326,11 @@ else
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
   <td class=xl70 width=177 style='width:133pt'></td>
-  <td class=xl70 width=105 style='width:79pt'></td>
+  <td class=xl70 width=73 style='width:55pt'></td>
+  <td class=xl70 width=50 style='width:38pt'></td>
+  <td class=xl70 width=47 style='width:35pt'></td>
+  <td class=xl70 width=177 style='width:133pt'></td>
+  <td class=xl70 width=73 style='width:55pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
   <td class=xl70 width=177 style='width:133pt'></td>
@@ -356,12 +361,8 @@ else
   <td class=xl70 width=73 style='width:55pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=76 style='width:57pt'></td>
-  <td class=xl70 width=73 style='width:55pt'></td>
-  <td class=xl70 width=50 style='width:38pt'></td>
-  <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=76 style='width:57pt'></td>
-  <td class=xl70 width=73 style='width:55pt'></td>
+  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=105 style='width:79pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
   <td class=xl70 width=76 style='width:57pt'></td>
@@ -1086,7 +1087,7 @@ else
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
   <td colspan=2 class=xl185 style='border-right:.5pt solid black;border-left:
-  none'>11</td>
+  none'>12</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1214,9 +1215,9 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>8</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>4800</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>5500</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
@@ -1349,9 +1350,9 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>7</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>4750</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>9</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>5450</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1576,8 +1577,8 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Růžička Martin
   [CZE069712]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>6</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>3000</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>7</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>3550</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -1799,8 +1800,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>7</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>2950</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>8</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>3400</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Pořadí</td>
@@ -2024,15 +2025,15 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>8</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>2800</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>9</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>3150</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl82 style='border-top:none'>Strašil Pavel [CZE015487]</td>
-  <td class=xl145 style='border-left:none'>6</td>
+  <td class=xl145 style='border-left:none'>7</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2582,9 +2583,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>750</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2662,9 +2665,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Hladký Pavel [CZE071237]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>4</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>1900</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Škareda Matěj [CZE069713]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>5</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>1950</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2737,9 +2740,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2817,9 +2822,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>9</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Škareda Matěj [CZE069713]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Hladký Pavel [CZE071237]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>4</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>1700</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>1900</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2891,9 +2896,12 @@ else
   [CZE069712]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Růžička Martin
+  [CZE069712]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3045,9 +3053,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3199,9 +3209,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Březina Lukáš [CZE022098]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3351,9 +3363,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Škareda Jan [CZE079725]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3428,10 +3442,12 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl78 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
+  font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
+  none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>13</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Březina Lukáš [CZE022098]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3496,9 +3512,11 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Škareda Matěj [CZE069713]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -14669,7 +14687,11 @@ else
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
   <td width=177 style='width:133pt'></td>
-  <td width=105 style='width:79pt'></td>
+  <td width=73 style='width:55pt'></td>
+  <td width=50 style='width:38pt'></td>
+  <td width=47 style='width:35pt'></td>
+  <td width=177 style='width:133pt'></td>
+  <td width=73 style='width:55pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
   <td width=177 style='width:133pt'></td>
@@ -14700,12 +14722,8 @@ else
   <td width=73 style='width:55pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=76 style='width:57pt'></td>
-  <td width=73 style='width:55pt'></td>
-  <td width=50 style='width:38pt'></td>
-  <td width=47 style='width:35pt'></td>
-  <td width=76 style='width:57pt'></td>
-  <td width=73 style='width:55pt'></td>
+  <td width=80 style='width:60pt'></td>
+  <td width=105 style='width:79pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
   <td width=76 style='width:57pt'></td>
