--- a/TKV2025_files/sheet019.htm
+++ b/TKV2025_files/sheet019.htm
@@ -16,7 +16,8 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	{mso-displayed-decimal-separator:"\,";
 	mso-displayed-thousand-separator:" ";}
 @page
-	{margin:.79in .7in .79in .7in;
+	{mso-footer-data:"&C\000D&1\#&\0022Calibri\0022&10&K000000 Confidential";
+	margin:.79in .7in .79in .7in;
 	mso-header-margin:.3in;
 	mso-footer-margin:.3in;}
 -->
@@ -192,38 +193,38 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
+ <col class=xl70 width=76 style='mso-width-source:userset;mso-width-alt:2779;
+ width:57pt'>
+ <col class=xl70 width=109 style='mso-width-source:userset;mso-width-alt:3986;
+ width:82pt'>
+ <col class=xl70 width=50 style='width:38pt'>
+ <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
+ width:35pt'>
+ <col class=xl70 width=76 style='mso-width-source:userset;mso-width-alt:2779;
+ width:57pt'>
+ <col class=xl70 width=109 style='mso-width-source:userset;mso-width-alt:3986;
+ width:82pt'>
+ <col class=xl70 width=50 style='width:38pt'>
+ <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
+ width:35pt'>
+ <col class=xl70 width=76 style='mso-width-source:userset;mso-width-alt:2779;
+ width:57pt'>
+ <col class=xl70 width=109 style='mso-width-source:userset;mso-width-alt:3986;
+ width:82pt'>
+ <col class=xl70 width=50 style='width:38pt'>
+ <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
+ width:35pt'>
+ <col class=xl70 width=76 style='mso-width-source:userset;mso-width-alt:2779;
+ width:57pt'>
+ <col class=xl70 width=109 style='mso-width-source:userset;mso-width-alt:3986;
+ width:82pt'>
+ <col class=xl70 width=50 style='width:38pt'>
+ <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
+ width:35pt'>
  <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
  width:60pt'>
  <col class=xl70 width=141 style='mso-width-source:userset;mso-width-alt:5156;
  width:106pt'>
- <col class=xl70 width=50 style='width:38pt'>
- <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
- width:35pt'>
- <col class=xl70 width=76 style='mso-width-source:userset;mso-width-alt:2779;
- width:57pt'>
- <col class=xl70 width=109 style='mso-width-source:userset;mso-width-alt:3986;
- width:82pt'>
- <col class=xl70 width=50 style='width:38pt'>
- <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
- width:35pt'>
- <col class=xl70 width=76 style='mso-width-source:userset;mso-width-alt:2779;
- width:57pt'>
- <col class=xl70 width=109 style='mso-width-source:userset;mso-width-alt:3986;
- width:82pt'>
- <col class=xl70 width=50 style='width:38pt'>
- <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
- width:35pt'>
- <col class=xl70 width=76 style='mso-width-source:userset;mso-width-alt:2779;
- width:57pt'>
- <col class=xl70 width=109 style='mso-width-source:userset;mso-width-alt:3986;
- width:82pt'>
- <col class=xl70 width=50 style='width:38pt'>
- <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
- width:35pt'>
- <col class=xl70 width=76 style='mso-width-source:userset;mso-width-alt:2779;
- width:57pt'>
- <col class=xl70 width=109 style='mso-width-source:userset;mso-width-alt:3986;
- width:82pt'>
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
@@ -359,24 +360,24 @@ else
   <td class=xl70 width=109 style='width:82pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
+  <td class=xl70 width=76 style='width:57pt'></td>
+  <td class=xl70 width=109 style='width:82pt'></td>
+  <td class=xl70 width=50 style='width:38pt'></td>
+  <td class=xl70 width=47 style='width:35pt'></td>
+  <td class=xl70 width=76 style='width:57pt'></td>
+  <td class=xl70 width=109 style='width:82pt'></td>
+  <td class=xl70 width=50 style='width:38pt'></td>
+  <td class=xl70 width=47 style='width:35pt'></td>
+  <td class=xl70 width=76 style='width:57pt'></td>
+  <td class=xl70 width=109 style='width:82pt'></td>
+  <td class=xl70 width=50 style='width:38pt'></td>
+  <td class=xl70 width=47 style='width:35pt'></td>
+  <td class=xl70 width=76 style='width:57pt'></td>
+  <td class=xl70 width=109 style='width:82pt'></td>
+  <td class=xl70 width=50 style='width:38pt'></td>
+  <td class=xl70 width=47 style='width:35pt'></td>
   <td class=xl70 width=80 style='width:60pt'></td>
   <td class=xl70 width=141 style='width:106pt'></td>
-  <td class=xl70 width=50 style='width:38pt'></td>
-  <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=76 style='width:57pt'></td>
-  <td class=xl70 width=109 style='width:82pt'></td>
-  <td class=xl70 width=50 style='width:38pt'></td>
-  <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=76 style='width:57pt'></td>
-  <td class=xl70 width=109 style='width:82pt'></td>
-  <td class=xl70 width=50 style='width:38pt'></td>
-  <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=76 style='width:57pt'></td>
-  <td class=xl70 width=109 style='width:82pt'></td>
-  <td class=xl70 width=50 style='width:38pt'></td>
-  <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=76 style='width:57pt'></td>
-  <td class=xl70 width=109 style='width:82pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
   <td class=xl70 width=76 style='width:57pt'></td>
@@ -1085,7 +1086,7 @@ else
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
   <td colspan=2 class=xl185 style='border-right:.5pt solid black;border-left:
-  none'>11</td>
+  none'>12</td>
   <td class=xl70></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -14389,24 +14390,24 @@ else
   <td width=109 style='width:82pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
+  <td width=76 style='width:57pt'></td>
+  <td width=109 style='width:82pt'></td>
+  <td width=50 style='width:38pt'></td>
+  <td width=47 style='width:35pt'></td>
+  <td width=76 style='width:57pt'></td>
+  <td width=109 style='width:82pt'></td>
+  <td width=50 style='width:38pt'></td>
+  <td width=47 style='width:35pt'></td>
+  <td width=76 style='width:57pt'></td>
+  <td width=109 style='width:82pt'></td>
+  <td width=50 style='width:38pt'></td>
+  <td width=47 style='width:35pt'></td>
+  <td width=76 style='width:57pt'></td>
+  <td width=109 style='width:82pt'></td>
+  <td width=50 style='width:38pt'></td>
+  <td width=47 style='width:35pt'></td>
   <td width=80 style='width:60pt'></td>
   <td width=141 style='width:106pt'></td>
-  <td width=50 style='width:38pt'></td>
-  <td width=47 style='width:35pt'></td>
-  <td width=76 style='width:57pt'></td>
-  <td width=109 style='width:82pt'></td>
-  <td width=50 style='width:38pt'></td>
-  <td width=47 style='width:35pt'></td>
-  <td width=76 style='width:57pt'></td>
-  <td width=109 style='width:82pt'></td>
-  <td width=50 style='width:38pt'></td>
-  <td width=47 style='width:35pt'></td>
-  <td width=76 style='width:57pt'></td>
-  <td width=109 style='width:82pt'></td>
-  <td width=50 style='width:38pt'></td>
-  <td width=47 style='width:35pt'></td>
-  <td width=76 style='width:57pt'></td>
-  <td width=109 style='width:82pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
   <td width=76 style='width:57pt'></td>
