--- a/TKV2025_files/sheet028.htm
+++ b/TKV2025_files/sheet028.htm
@@ -16,7 +16,8 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	{mso-displayed-decimal-separator:"\,";
 	mso-displayed-thousand-separator:" ";}
 @page
-	{margin:.79in .7in .79in .7in;
+	{mso-footer-data:"&C\000D&1\#&\0022Calibri\0022&10&K000000 Confidential";
+	margin:.79in .7in .79in .7in;
 	mso-header-margin:.3in;
 	mso-footer-margin:.3in;}
 -->
@@ -45,8 +46,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=10777 style='border-collapse:
- collapse;table-layout:fixed;width:8104pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=10781 style='border-collapse:
+ collapse;table-layout:fixed;width:8107pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=230 style='mso-width-source:userset;mso-width-alt:8411;
@@ -68,8 +69,8 @@ else
  width:35pt'>
  <col class=xl70 width=205 style='mso-width-source:userset;mso-width-alt:7497;
  width:154pt'>
- <col class=xl70 width=141 style='mso-width-source:userset;mso-width-alt:5156;
- width:106pt'>
+ <col class=xl70 width=109 style='mso-width-source:userset;mso-width-alt:3986;
+ width:82pt'>
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
@@ -227,10 +228,10 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=76 style='mso-width-source:userset;mso-width-alt:2779;
- width:57pt'>
- <col class=xl70 width=109 style='mso-width-source:userset;mso-width-alt:3986;
- width:82pt'>
+ <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
+ width:60pt'>
+ <col class=xl70 width=141 style='mso-width-source:userset;mso-width-alt:5156;
+ width:106pt'>
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
@@ -288,7 +289,7 @@ else
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
   <td class=xl70 width=205 style='width:154pt'></td>
-  <td class=xl70 width=141 style='width:106pt'></td>
+  <td class=xl70 width=109 style='width:82pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
   <td class=xl70 width=208 style='width:156pt'></td>
@@ -379,8 +380,8 @@ else
   <td class=xl70 width=109 style='width:82pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=76 style='width:57pt'></td>
-  <td class=xl70 width=109 style='width:82pt'></td>
+  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=141 style='width:106pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
   <td class=xl70 width=76 style='width:57pt'></td>
@@ -1085,7 +1086,7 @@ else
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
   <td colspan=2 class=xl185 style='border-right:.5pt solid black;border-left:
-  none'>11</td>
+  none'>12</td>
   <td class=xl70></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1220,7 +1221,7 @@ else
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
   <td colspan=2 class=xl185 style='border-right:.5pt solid black;border-left:
-  none'>18</td>
+  none'>17</td>
   <td class=xl68></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -14711,7 +14712,7 @@ else
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
   <td width=205 style='width:154pt'></td>
-  <td width=141 style='width:106pt'></td>
+  <td width=109 style='width:82pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
   <td width=208 style='width:156pt'></td>
@@ -14802,8 +14803,8 @@ else
   <td width=109 style='width:82pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=76 style='width:57pt'></td>
-  <td width=109 style='width:82pt'></td>
+  <td width=80 style='width:60pt'></td>
+  <td width=141 style='width:106pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
   <td width=76 style='width:57pt'></td>
